# Spedread

./: CONTRIBUTING.md  Cargo.toml  LICENSE.txt  README.md  com.github.Darazaki.Spedread.json  com.github.darazaki.Spedread.json  meson.build  meson_options.txt  n.darazaki.Spedread.json  rustfmt.toml
.github/workflows/: build-n-test.yml
data/: com.github.Darazaki.Spedread.appdata.xml.in  com.github.Darazaki.Spedread.desktop.in  com.github.Darazaki.Spedread.gschema.xml  com.github.darazaki.Spedread.appdata.xml.in  com.github.darazaki.Spedread.gschema.xml  meson.build  n.darazaki.Spedread.appdata.xml.in  n.darazaki.Spedread.desktop.in  n.darazaki.Spedread.gschema.xml
data/icons/: meson.build
dev-scripts/: build.sh  new-translation.sh  open-built-appdata.sh  update-translations.sh  validate-appdata.sh
dict/: example.list
po/: LINGUAS  POTFILES  _base.po  _base.pot  cs.po  de.po  fr.po  it.po  meson.build  nl.po  oc.po  ru.po
src/: SpedreadApp.vala  SpedreadDictionary.vala  SpedreadIterHistory.vala  SpedreadMenuButton.vala  SpedreadReadTab.vala  SpedreadSettings.vala  SpedreadTextTab.vala  SpedreadWindow.vala  config.vapi  main.c  main.rs  meson.build  spedread-window.c  spedread-window.h  spedread-window.ui  spedread.gresource.xml
